- MWComponents' activity state can be changed using the ConfigurationAdmin now and the options can be localized now
git-svn-id: svn://svn.paxle.net/paxle/trunk@1493 f5d3ab42-bacf-4b1a-9692-565be65a0cfe